# hello_agrpc

./: CMakeLists.txt  compile.sh  vcpkg.json
cpp/hello_agrpc/: hello.cpp  hello_agrpc_client.cpp  hello_agrpc_server.cpp
proto/hello_agrpc/: hello_agrpc.proto
